(Raster)

make the memory debugging stuff better commented - and add ipc call tyo 
dump mem debug info

-------------------------------------------------------------------------------

Wed Sep 22 16:39:43 PDT 1999
(Mandrake)

moved kde client change property handler a little, but I don't think this is
going to make a difference.

-------------------------------------------------------------------------------

Wed Sep 22 17:55:48 PDT 1999
(KainX)

Added a "query" command to the imageclass IPC.  This is for an Eterm
feature.

-------------------------------------------------------------------------------

Wed Sep 22 18:21:40 PDT 1999
(KainX)

Ergh...let's not go freeing image classes willy-nilly, shall we?

-------------------------------------------------------------------------------

Wed Sep 22 20:07:31 PDT 1999
(Raster)

disabel pagers and icobnoxes form going into groups - ok theres a bug 
restoring them and i've had enough of looking at that code.. so i simply
disabled it. much simpler.

-------------------------------------------------------------------------------

Wed Sep 22 20:17:22 PDT 1999
(Raster)

get rid of printf.......

-------------------------------------------------------------------------------

Thu Sep 23 16:46:10 EST 1999
(Christian)

Ok, groups behave inconsistent if you use them over
multiple desktops and via the titlebar or the menu,
so group effects are limited to the current desktop
for now.


-------------------------------------------------------------------------------

Thu Sep 23 14:40:50 PDT 1999
(KainX)

Woops.  Width and height of 0 doesn't make for a happy pixmap.  Let
E figure it out.  This fixes Eterm's auto mode.

-------------------------------------------------------------------------------

Thu Sep 23 14:52:38 PDT 1999
(Raster)

ok- theres a memeory leak if you use color modifiers in yout theme.. and thus
color modifiers have been disabled - spent too many hours looking for the leak
and cannot find it anywhere.